# hannoy

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  benchmarks.md  hannoy.pyi  pyproject.toml  release-plz.toml
.github/workflows/: codspeed.yml  pypi.yml  rust.yml
benches/: bench.rs  benchmark.rs  speed.rs
benchmarks/: arroy_hannoy.md  cosine_hamming.md
example/: Cargo.toml  README.md
example/src/: main.rs
src/: error.rs  hnsw.rs  item_iter.rs  key.rs  lib.rs  metadata.rs  node.rs  node_id.rs  ordered_float.rs  parallel.rs  progress.rs  python.rs  reader.rs  roaring.rs  stats.rs  update_status.rs  version.rs  writer.rs
src/distance/: binary_quantized_cosine.rs  binary_quantized_euclidean.rs  binary_quantized_manhattan.rs  cosine.rs  euclidean.rs  hamming.rs  manhattan.rs  mod.rs
src/python/: mod.rs  writer.rs
src/spaces/: simple.rs
src/tests/: fuzz.rs  mod.rs  reader.rs  writer.rs
src/tests/snapshots/: hannoy__tests__writer__write_and_update_lot_of_random_points_with_snapshot-2.snap  hannoy__tests__writer__write_and_update_lot_of_random_points_with_snapshot.snap
src/unaligned_vector/: binary.rs  binary_quantized.rs  mod.rs
tests/: test_basic.py
