[package]
name = "hannoy"
description = "HNSW Approximate Nearest Neighbors in Rust, based on LMDB and optimized for memory usage"
version = "0.0.5"
repository = "https://github.com/nnethercott/hannoy"
keywords = [
    "HNSW",
    "Graph-algorithms",
    "Vector-Search",
    "Store",
    "Nearest-Neighbours",
]
categories = ["algorithms", "database", "data-structures", "science"]
authors = [
    "Kerollmops <clement@meilisearch.com>",
    "Tamo <tamo@meilisearch.com>",
    "Nate <nnethercott@gmail.com>",
]
license = "MIT"
edition = "2021"

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive", "extern_crate_alloc"] }
byteorder = "1.5.0"
hashbrown = "0.15.4"
heed = { version = "0.22.0", default-features = false }
min-max-heap = "1.3.0"
page_size = "0.6.0"
papaya = "0.2.3"
rand = { version = "0.8.5", features = ["alloc"] }
rayon = "1.10.0"
roaring = "0.10.9"
rustc-hash = "2.1.1"
thiserror = "2.0.9"
tinyvec = { version = "1.9.0", features = ["rustc_1_55"] }
tracing = "0.1.41"
steppe = { version = "0.4", default-features = false }
madvise = "0.1.0"

[dev-dependencies]
anyhow = "1.0.95"
approx = "0.5.1"
arbitrary = { version = "1.4.1", features = ["derive"] }
arroy = "0.6.1"
clap = { version = "4.5.24", features = ["derive"] }
divan = { version = "3.0.5", package = "codspeed-divan-compat" }
env_logger = "0.11.6"
insta = "1.42.0"
instant-distance = "0.6.1"
proptest = "1.6.0"
rand = { version = "0.8.5", features = ["std_rng", "min_const_gen"] }
tempfile = "3.20.0"

[features]
default = []

# Enabling this feature provide a method on the reader that assert its own validity.
assert-reader-validity = []

[profile.dev]
opt-level = 3

[[bench]]
name = "benchmark"
harness = false
